BE-55, refactor: toList()
Signed-off-by: Yejin Kelly Joo <yejinkellyjoo@gmail.com>